<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_public_community"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/nav_public_groups"
            />
        <item android:id="@+id/nav_my_groups"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_my_groups"/>
        <item android:id="@+id/nav_inbox"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_inbox"
            android:checked="true"/>
    </group>

    <item android:title="@string/nav_support">
        <menu>
            <item android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help"/>
            <item android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback"/>
        </menu>
    </item>

</menu>